--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -24,3 +24,14 @@ gc:
         with: avec
         and: " et "
         celebrationWith: Célébration avec
+        year: Année
+        month: Mois
+        day: Jour
+        man: Homme
+        woman: Femme
+    security:
+        login: Se connecter
+        logout: Se déconnecter
+        username: Nom d'utilisateur
+        password: Mot de passe
+        keepMe: Rester connecté
