--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -5,3 +5,7 @@ gc:
         watchLast: 'Regardez nos célébrations précédentes'
         more: Plus
         kidsProgram: Un programme spécial pour les 0 à 12 ans est organisé
+        allSunday:
+            lausanne: Chaque dimanche soir à 18h
+            annecy: Chaque dimanche matin à 10h30
+            montreux: Chaque dimanche matin à 10h30
