--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -19,7 +19,7 @@ gc:
         youth: Youth
         events: Events
         contact: Contact
-        give: Support us
+        give: "Support us"
         about: About
     generic:
         with: with
