--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -41,3 +41,9 @@ gc:
         ministries: Ministères
         partners: Partenaires
         social: Réseaux sociaux
+    form:
+        name: Nom
+        e-mail: E-mail
+        phone: Téléphone
+        send: Envoyer
+        message: Message
