Edit Celebration page for GCAnnecy

--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -7,5 +7,7 @@ gc:
         kidsProgram: A special program for kids age 0-12 is organized
         allSunday:
             lausanne: All sunday evening at 6pm
-            annecy: All sunday evening at 10:30 pm and all last sunday of the month at 5pm
+            annecy: |
+                All sunday evening at 10:30 pm
+                and all last sunday of the month at 5 pm
             montreux: All sunday evening at 10:30 pm
