--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -7,5 +7,7 @@ gc:
         kidsProgram: Un programme spécial pour les 0 à 12 ans est organisé
         allSunday:
             lausanne: Chaque dimanche soir à 18h
-            annecy: Chaque dimanche matin à 10h30 et tous les derniers dimanche du mois à 17h
+            annecy: |
+                Chaque dimanche matin à 10h30
+                et tous les derniers dimanche du mois à 17h
             montreux: Chaque dimanche matin à 10h30
