--- a/src/gospelcenter/PageBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/PageBundle/Resources/translations/messages.en.yml
@@ -4,8 +4,8 @@ gc:
             nextEvent: Next events
             moreEvents: More events
         about:
-            positive: "Encouraging a christian lifestyle that motivates, builds and develops the abilities and gifts of everyone."
-            practice: "Activities, teachings that will impact your everyday life."
+            positive: "Encouraging a Christian lifestyle that motivates, builds and develops the abilities and gifts of everyone."
+            practice: "Activities and teachings that will impact your everyday life."
             powerful: "The Gospel Center has the desire to live the Gospel in the most relevant way, also in the area of healing and miracles."
             nav:
                 about: About
