--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -1,13 +1,13 @@
 gc:
     celebration:
         nextSpeakers: Next speakers
-        desc: "Focused on the manifestation of God's power, the celebrations consist of live music, a powerful message, contacts and many more surprises. The focus is put on faith and the reality of God today."
+        desc: "Our celebrations are focused on the manifested power of God and made of live music, a powerful message, friendship and many more suprises. The focus is put on faith and the reality of God today."
         watchLast: Watch our previous celebrations
         more: More
         kidsProgram: A special program for kids age 0-12 is organized
         allSunday:
-            lausanne: All sunday evening at 6pm
+            lausanne: Every sunday evening at 6pm
             annecy: |
-                All sunday evening at 10:30 pm
+                Every sunday evening at 10:30 pm
                 and all last sunday of the month at 5 pm
-            montreux: All sunday evening at 10:30 pm
+            montreux: Every sunday evening at 10:30 pm
