set gc-juar to prod

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -25,6 +25,7 @@ gc:
         with: with
         and: " and "
         celebrationWith: Celebration with
+        celebration: Celebration
 
     security:
         login: Sign in
