--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -25,6 +25,7 @@ gc:
         with: avec
         and: " et "
         celebrationWith: Célébration avec
+        celebration: Célébration
         year: Année
         month: Mois
         day: Jour
