--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -6,9 +6,15 @@ gc:
         more: Plus
         kidsProgram: Un programme spécial pour les 0 à 12 ans est organisé
         allSunday:
-            lausanne: Chaque dimanche soir à 18h
+            #lausanne: Chaque dimanche soir à 18h
+            lausanne: |
+                Pause estivale
+                du 12 juillet au 23 août
+            #annecy: |
+            #    Chaque dimanche matin à 10h30
+            #    et tous les derniers dimanche du mois à 17h
             annecy: |
-                Chaque dimanche matin à 10h30
-                et tous les derniers dimanche du mois à 17h
+                Horaire estival
+                Chaque dimanche soir à 18h
             montreux: Chaque dimanche matin à 10h30
             jura: Chaque dimanche soir à 18h
