- security update - remove "Equipe Apostolique"from th top - add sharing button for event - add sharing button for celebrations - add slides on the home page - hide text on ads - change status for slide

--- a/src/gospelcenter/AdminBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/AdminBundle/Resources/translations/messages.fr.yml
@@ -51,6 +51,8 @@ gc:
             kids_program: Programme pour les enfants
             location: Lieu
             choose_location: Choisissez un lieu
+            selectSpeakers: Sélectionnez un orateur
+            selectAudio: Sélectionnez un audio
             tab:
                 general: Général
                 preaching: Message
@@ -91,6 +93,8 @@ gc:
             postal_code: Code postale
             city: Ville
             country: Pays
+        pages:
+            title: Titre
         events:
             add: Créer un event
             edit: Modifier un event
