--- a/src/gospelcenter/PageBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/PageBundle/Resources/translations/messages.fr.yml
@@ -13,6 +13,7 @@ gc:
                 staff: Staff
                 believe: Confession de foi
                 music: Musique
+                coaching: Coaching
         bases:
             findBase: TROUVEZ UNE BASE PRÈS DE CHEZ VOUS
             moreInfos: Pour plus d'infos, contactez-nous
