--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -6,10 +6,10 @@ gc:
         more: More
         kidsProgram: A special program for kids age 0-12 is organized
         allSunday:
-            lausanne: Every sunday evening at 6pm
-            #lausanne: |
-            #    Summer break
-            #    July 12 to August 23
+            #lausanne: Every sunday evening at 6pm
+            lausanne: |
+                From January 10 to 18h
+                at D! Club Lausanne
             annecy: |
                 Every sunday evening at 10:30 pm
                 and all last sunday of the month at 5 pm
