--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -6,10 +6,10 @@ gc:
         more: Plus
         kidsProgram: Un programme spécial pour les 0 à 12 ans est organisé
         allSunday:
-            lausanne: Chaque dimanche soir à 18h
-            #lausanne: |
-            #    Pause estivale
-            #    du 12 juillet au 23 août
+            #lausanne: Chaque dimanche soir à 18h
+            lausanne: |
+                Dès le 10 janvier à 18h
+                au D! Club Lausanne
             annecy: |
                 Chaque dimanche matin à 10h30
                 et tous les derniers dimanche du mois à 17h
