- change celebration slogan for lausanne

--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -8,8 +8,8 @@ gc:
         allSunday:
             #lausanne: Every sunday evening at 6pm
             lausanne: |
-                From January 10 to 18h
-                at D! Club Lausanne
+                From January 10
+                at D! Club
             annecy: |
                 Every sunday evening at 10:30 pm
                 and all last sunday of the month at 5 pm
