--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -8,8 +8,8 @@ gc:
         allSunday:
             #lausanne: Chaque dimanche soir à 18h
             lausanne: |
-                Dès le 10 janvier à 18h
-                au D! Club Lausanne
+                Dès le 10 janvier
+                au D! Club
             annecy: |
                 Chaque dimanche matin à 10h30
                 et tous les derniers dimanche du mois à 17h
