- change celebration slogan for lausanne

--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -6,9 +6,8 @@ gc:
         more: More
         kidsProgram: A special program for kids age 0-12 is organized
         allSunday:
-            #lausanne: Every sunday evening at 6pm
             lausanne: |
-                From January 10
+                Every sunday evening at 6pm
                 at D! Club
             annecy: |
                 Every sunday evening at 10:30 pm
