--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -6,9 +6,8 @@ gc:
         more: Plus
         kidsProgram: Un programme spécial pour les 0 à 12 ans est organisé
         allSunday:
-            #lausanne: Chaque dimanche soir à 18h
             lausanne: |
-                Dès le 10 janvier
+                Chaque dimanche soir à 18h
                 au D! Club
             annecy: |
                 Chaque dimanche matin à 10h30
