--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -6,12 +6,12 @@ gc:
         more: More
         kidsProgram: A special program for kids age 0-12 is organized
         allSunday:
-            #lausanne: |
-            #    Every sunday evening at 6pm
-            #    at D! Club
             lausanne: |
-                Summer break
-                Resumption of celebrations August 21
+                Every sunday evening at 6pm
+                at D! Club
+            #lausanne: |
+            #    Summer break
+            #    Resumption of celebrations August 21
             annecy: |
                 Every sunday evening at 10:30 pm
                 and all last sunday of the month at 5 pm
