--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -18,5 +18,6 @@ gc:
             #annecy: |
             #    Summer schedule
             #    Every sunday evening at 6pm
-            montreux: Every sunday evening at 10:30 pm
+            montreux: Every sunday evening at 10:30 am
             jura: Every sunday evening at 6pm
+            beroche: Every sunday morning at 10 am
