--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -20,3 +20,4 @@ gc:
             #    Chaque dimanche soir à 18h
             montreux: Chaque dimanche matin à 10h30
             jura: Chaque dimanche soir à 18h
+            beroche: Chaque dimanche matin à 10h
