update info celebration annacy

--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -13,8 +13,8 @@ gc:
             #    Summer break
             #    Resumption of celebrations August 21
             annecy: |
-                Every sunday evening at 10:30 pm
-                and all last sunday of the month at 5 pm
+                Every sunday morning at 10:30 am
+                and all last sunday of the month at 6 pm
             #annecy: |
             #    Summer schedule
             #    Every sunday evening at 6pm
