--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -14,7 +14,7 @@ gc:
             #    Reprise des célébrations le 21 août
             annecy: |
                 Chaque dimanche matin à 10h30
-                et tous les derniers dimanche du mois à 17h
+                et tous les derniers samedi du mois à 18h
             #annecy: |
             #    Horaire estival
             #    Chaque dimanche soir à 18h
