--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -21,3 +21,6 @@ gc:
             montreux: Every sunday evening at 10:30 am
             jura: Every sunday evening at 6pm
             beroche: Every sunday morning at 10 am
+            lacote: |
+                Les célébrations démarrent bientôt !
+                Plus d’informations en début janvier
