--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -21,3 +21,6 @@ gc:
             montreux: Chaque dimanche matin à 10h30
             jura: Chaque dimanche soir à 18h
             beroche: Chaque dimanche matin à 10h
+            lacote: |
+                Les célébrations démarrent bientôt !
+                Plus d’informations en début janvier
