--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.en.yml
@@ -22,5 +22,5 @@ gc:
             jura: Every sunday evening at 6pm
             beroche: Every sunday morning at 10 am
             lacote: |
-                Les célébrations démarrent bientôt !
-                Plus d’informations en début janvier
+                Every sunday evening at 5:30 pm
+                from the 22nd january
