--- a/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
+++ b/src/gospelcenter/CelebrationBundle/Resources/translations/messages.fr.yml
@@ -22,5 +22,5 @@ gc:
             jura: Chaque dimanche soir à 18h
             beroche: Chaque dimanche matin à 10h
             lacote: |
-                Les célébrations démarrent bientôt !
-                Plus d’informations en début janvier
+                Chaque dimanche soir à 17h30
+                dès le 22 janvier 2017
